# CocoPack

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: index.doctree
.doctrees/api/python/: figure_ops.doctree  index.doctree
.doctrees/api/shell/: index.doctree
.doctrees/dev/: contributing.doctree  release_notes.doctree
.doctrees/user/: cli.doctree  installation.doctree  quickstart.doctree
.github/: index.md
.github/workflows/: docs.yml  publish.yml
_modules/: index.html
_modules/cocopack/: convert.html  figure_ops.html  overleaf.html  pacman.html  path_ops.html
_modules/cocopack/notebook/: magics.html
_sources/: index.rst.txt
_sources/api/python/: index.rst.txt
_sources/api/shell/: index.rst.txt
_sources/dev/: contributing.rst.txt  release_notes.rst.txt
_sources/user/: quickstart.rst.txt
_static/: custom.js
api/python/: figure_ops.html  index.html
api/shell/: index.html
dev/: contributing.html  release_notes.html
docs/: Makefile  README.md
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css  custom.js
docs/source/_templates/: layout.html
docs/source/api/python/: convert.rst  figure_ops.rst  index.rst
docs/source/api/r/: index.rst
docs/source/api/shell/: index.rst
docs/source/dev/: contributing.rst  release_notes.rst
docs/source/user/: cli.rst  installation.rst  quickstart.rst
macOS/: README.md
macOS/applescript/: keynote_to_png.scpt  pptx_to_png.scpt  rsync_selected.scpt
python/: __init__.py
python/cocopack/: __init__.py  convert.py  figure_ops.py  keynote.py  overleaf.py  pacman.py  path_ops.py  powerpoint.py
python/cocopack/shell/: cli.py  commands.py
python/cocopack/shellpack/: __init__.py  cli.py  commands.py  install.py
python/wrappers/: shellscript.py
scripts/: README.md  preview_docs.py  preview_docs.sh  slides_to_images.py  test_installation.py  test_installation.sh  test_pypi_build.py  test_pypi_build.sh
shell/: README.md  colorcode.sh  prompt.sh
shell/scripts/: clear_git_history.sh  install_cocopack.sh
user/: cli.html  installation.html  quickstart.html
verse/: README.md  cocopack.R
wiki-pack/: README.md  devsetup.md  docsetup.md
wiki-xyz/: README.md
