[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coco-pack"
version = "0.1.0"
description = "Programmatic toolkits for Python and shell scripting"
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-only"
authors = [
    { name = "Colin Conwell", email = "colinconwell@gmail.com" },
]
dependencies = [
    "ipython>=8.0.1",
    "jupyter>=4.0.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
shell = []
namespaced = []  # For users who prefer cocopack namespace only
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[project.scripts]
# Main command
cocopack = "cocopack.shell.cli:main"

# Direct shell commands (default)
path-cleanup = "cocopack.shell.commands:path_cleanup_cmd"
color-wrap = "cocopack.shell.commands:color_wrap_cmd"
jekyll-restart = "cocopack.shell.commands:jekyll_restart_cmd"
jekyll-reload = "cocopack.shell.commands:jekyll_reload_cmd"
jekyll-restart-plus = "cocopack.shell.commands:jekyll_restart_plus_cmd"
clear-git-history = "cocopack.shell.commands:clear_git_history_cmd"

[project.urls]
Homepage = "https://github.com/ColinConwell/Coco-Pack"
Documentation = "https://github.com/ColinConwell/Coco-Pack/wiki"
Repository = "https://github.com/ColinConwell/Coco-Pack.git"
BugTracker = "https://github.com/ColinConwell/Coco-Pack/issues"

[tool.hatch.build]
packages = ["python/cocopack"]
# Include shell scripts in the package data
artifacts = [
    "shell/scripts/*.sh",
    "shell/helpers/*.sh",
    "shell/*.sh",
]

# New section for shell script installation
[tool.hatch.build.targets.wheel.scripts]
coco-colorcode = "shell/colorcode.sh"
coco-prompt = "shell/prompt.sh"
coco-ezshell = "shell/ezshell.sh"
coco-jekyll = "shell/helpers/jekyll.sh"
clear-git-history = "shell/scripts/clear_git_history.sh"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]
python = "^3.7"

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=cocopack {args:tests}"

[tool.hatch.envs.lint]
dependencies = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
[tool.hatch.envs.lint.scripts]
style = [
    "black {args:.}",
    "isort {args:.}",
]
type = "mypy --install-types --non-interactive {args:python/cocopack}"
check = ["style", "type"]

[tool.hatch.envs.docs]
dependencies = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=1.0.0",
]
[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs/source docs/build"

[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3